--- a/oops.html
+++ b/oops.html
@@ -2,9 +2,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Trevor Delker" />
+    <meta name="description" content="Letting you know a little bit about me :]" />
     <link rel="stylesheet" type="text/css" href="yoted.css" /> 
     <title>Link CSS to HTML</title>
 </head>
 
+<body id="Delker_Resume">
 <h1>Hello World!</h1>
 <h2>A resume for Trevor Delker</h2>
+
+<p>I guess this is where I would start to go into the nitty, gritty details about my experience in various technologies and coding languages. But, there's only so much you can do with words. 
+    That is why I thought it would be a lot more fun for any hiring manager, or HR professional, to view this instead of a stand resume. This may be supplemental, or primary. Just have fun!
+</p>
+
+
+
